# Turtlebot4-VLM

./: .env.example  .gitignore  JETSON_SETUP.md  README.md  RPI_SETUP.md  SERVER_SETUP.md  deploy_robot.sh
backend/: requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/models/: __init__.py  detection.py  mission.py  navigation.py  user.py
backend/app/routes/: __init__.py  auth.py  camera.py  detections.py  health.py  maps.py  vision.py
backend/app/services/: __init__.py  storage.py  vision_model.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
edge-bot/config/: robot_config.yaml
edge-bot/scripts/: dock.sh  dock_ros.sh  retrace.py  run_trash_bot.sh  start_search.sh  start_vision_server.sh  stop.sh  undock.sh
edge-bot/src/trash_bot/: CMakeLists.txt  package.xml
edge-bot/src/trash_bot/config/: params.yaml  slam_params.yaml
edge-bot/src/trash_bot/launch/: slam_launch.py  trash_bot_launch.py
edge-bot/src/trash_bot/msg/: BinDetection.msg  RobotCommand.msg
edge-bot/src/trash_bot/src/: bin_detector_node.cpp  motion_subscriber.cpp
edge-bot/src/trash_bot/srv/: ClassifyBin.srv  ExecuteCommand.srv  FindBin.srv
edge-bot/src/trash_bot/trash_bot/: __init__.py  camera_publisher_node.py  classification_camera_publisher.py  classifier_node.py  command_client.py  command_service.py  llama_vision_client.py  map_publisher_node.py  navigation_vlm_node.py  smolvlm_navigator.py
edge-jetson/config/: config.yaml  jetson.yaml  rpi.yaml
edge-jetson/requirements/: base.txt  jetson.txt  rpi.txt
edge-jetson/src/: __init__.py  api_client.py  camera.py  detector.py  device_platform.py  main.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.jsx  styles.css
frontend/src/components/: BinFullnessCard.jsx  BoundingBoxOverlay.jsx  ClassificationCameraFeed.jsx  Dashboard.jsx  DetectionFeed.jsx  DetectionHistory.jsx  LiveCameraFeed.jsx  Login.jsx  MapView.jsx  NavigationSummary.jsx  StatsPanel.jsx  SummaryCard.jsx  ThemeToggle.jsx
frontend/src/services/: api.js  socket.js
scripts/: build_dashboard.sh  build_edge.sh  setup_edge.sh  setup_jetson.sh
