<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trash_bot</name>
  <version>1.0.0</version>
  <description>Autonomous Trash Bin Detection Robot using TurtleBot4 and Florence-2</description>
  <maintainer email="g3ubuntu@example.com">g3ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Python dependencies -->
  <depend>rclpy</depend>
  <depend>turtlebot4_msgs</depend>
  <depend>std_srvs</depend>
  <depend>irobot_create_msgs</depend>

  <!-- Message generation -->
  <depend>builtin_interfaces</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
